[package]
name = "fss_rust_1"
version = "0.1.0"
authors = ["Devanshu Singla <devanshu803.singla@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aesni = "0.7.0"
rand = "0.5.0"

[dev-dependencies]
criterion = "0.1.2"
